# Sudoku-project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
header/: Cell.hpp  Check.hpp  ControlCell.hpp  Difficult.hpp  Formatter.hpp  GameCell.hpp  Generator.hpp  Helper.hpp  MainWindow.hpp  MatrixFunctions.hpp  PlayingWindow.hpp  ScoreFunctions.hpp  ScoreLabel.hpp  ScoreWindow.hpp
old/: Generator.cpp
src/: Cell.cpp  Check.cpp  ControlCell.cpp  Difficult.cpp  Formatter.cpp  GameCell.cpp  Generator.cpp  Helper.cpp  MainWindow.cpp  MatrixFunctions.cpp  PlayingWindow.cpp  ScoreFunctions.cpp  ScoreLabel.cpp  ScoreWindow.cpp
